<resources>
    <string name="app_name">Writery</string>
    <string name="title_notifications">Notifications</string>
    <string name="write">글쓰기</string>
    <string name="main">메인 화면</string>
    <string name="appName">소설장</string>
    <string name="modify">수정</string>
    <string name="preview">미리보기</string>
    <string name="erase">지우개</string>
    <string name="save">저장</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="check">확인</string>
    <string name="explain">설명</string>
    <string name="delete">삭제</string>
    <string name="back">돌아가기</string>
    <string name="AddEpisode">에피소드 추가</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="savemoment">임시 저장하고 나가시겠습니까?</string>
    <string name="setting">설정</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="read">보기</string>
</resources>
