<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/dlg_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="start|center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:text="@string/savemoment"
        android:background="@drawable/border"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#000000"
            android:textSize="16sp"
            android:background="@drawable/border"/>



        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#000000"
            android:textSize="16sp"
            android:background="@drawable/border"/>

    </LinearLayout>
</LinearLayout>