<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.button.MaterialButton
            android:onClick="preView"
            app:cornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:background="@drawable/border"
            android:backgroundTint="@color/design_default_color_primary"
            app:rippleColor="@color/design_default_color_primary_dark"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/erase"
            app:cornerRadius="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erase"
            android:onClick="erase"
            android:backgroundTint="@color/design_default_color_primary"
            app:rippleColor="@color/design_default_color_primary_dark"/>

        <View
            android:background="#00FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/save"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cornerRadius="10dp"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="savebtn"
            android:text="@string/save"
            android:backgroundTint="@color/design_default_color_primary"
            app:rippleColor="@color/design_default_color_primary_dark"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000000"/>

    <EditText
        android:id="@+id/on_write_title"
        android:layout_width="357dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:hint="@string/title"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text=""
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000000"/>

    <EditText
        android:text=""
        android:id="@+id/on_write_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:gravity="top|start"
        android:textSize="20sp"
        android:background="@android:color/white"
        android:hint="@string/contents"/>

</LinearLayout>