<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:elevation="15dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#304FFE"
                android:onClick="gotoWrite"
                android:text="@string/back"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#6200EA" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/write_setting_img"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:src="@drawable/front" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/write_setting_img"
                android:layout_alignBottom="@+id/write_setting_img"
                android:background="#00111111"
                android:onClick="gotoAlbum"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:src="@android:drawable/ic_menu_camera" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#4E4E4E" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00111111" />

        <EditText
            android:id="@+id/write_setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@android:color/darker_gray"
            android:gravity="center|top"
            android:text=""
            android:hint="@string/title"
            android:maxLines="1"
            android:maxLength="10"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00111111" />

        <EditText
            android:text=""
            android:id="@+id/write_setting_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:gravity="start|top"
            android:hint="@string/explain"
            android:lines="3"
            android:maxLines="3"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />


    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:onClick="checkbtn"
        app:cornerRadius="10dp"
        app:rippleColor="#6200EA"
        android:backgroundTint="#304FFE"
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>