<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.button.MaterialButton
        android:shadowRadius="10dp"
        app:rippleColor="#6200EA"
        android:text="돌아가기"
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#304FFE"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconTint="WHITE"/>


    <LinearLayout
        android:elevation="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.7"
        tools:layout_editor_absoluteY="59dp"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <ImageButton
                android:paddingTop="30dp"
                android:paddingStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageView"
                android:layout_alignBottom="@+id/imageView"
                android:background="#00111111"
                app:srcCompat="@android:drawable/ic_menu_camera" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="#4E4E4E" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00111111" />

        <EditText
            android:id="@+id/cardview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center|top"
            android:hint="@string/title"
            android:maxLines="1"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00111111" />

        <EditText
            android:id="@+id/cardview_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:gravity="start|top"
            android:hint="@string/explain"
            android:lines="3"
            android:maxLines="3"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />


    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:shadowRadius="10dp"
        app:rippleColor="#6200EA"
        android:backgroundTint="#304FFE"
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>