<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:elevation="15dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/write_back_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#304FFE"
                android:onClick="goToHome"
                android:text="@string/back"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconTint="#FFFFFF"
                app:rippleColor="#6200EA" />

            <ImageButton
                android:id="@+id/write_setting_btn"
                android:onClick="Setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="#00FFFFFF"
                android:src="@drawable/baseline_settings_black_18dp" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/write_img"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:src="@drawable/front" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/write_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0.5"
                    android:gravity="start|bottom"
                    android:hint="text"
                    android:padding="5dp"
                    android:textSize="10pt" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginEnd="30dp"
                    android:background="#4E4E4E" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0.1"
                    android:background="#00111111" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/write_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start|top"
            android:background="@drawable/border"
            android:lines="3"
            android:hint="@string/explain"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="10pt" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00111111" />

        <android.support.design.button.MaterialButton
            android:id="@+id/addEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#00B8D4"
            android:onClick="gotoOnWrite"
            android:text="@string/AddEpisode"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:rippleColor="#00C853" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/write_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>